--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Chess</title>
+    <script data-main="dist/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <canvas id="board"></canvas>
-    <script src="dist/main.js"></script>
   </body>
 </html>
