--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="src/style.css" />
     </head>
     <body>
-        <canvas id="board"></canvas>
+        <canvas id="board" style="display: none"></canvas>
     </body>
 </html>
