--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <canvas id="board" class="board" style="display: none"> </canvas>
+            <canvas id="board" class="board" width="600" height="600"> </canvas>
 
             <div id="moves" class="moves">
                 1. e4 c6 2. d4 d5 3. exd5 cxd5 4. Nc3 Nf6 5. Bb5+ Nc6 6. Bxc6+ bxc6 7. Nf3 Bf5 8. O-O e6 9. Bf4 c5 10.
