Undo redo, en passant improve

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <canvas id="board" class="board" width="640" height="640"> </canvas>
+            <canvas id="board" class="board"> </canvas>
 
             <div class="panel">
                 <div id="moves" class="moves">
@@ -54,9 +54,9 @@
                 </div>
 
                 <div class="actions">
-                    <button id="undo">&lt;</button>
-                    <button id="redo">&gt;</button>
-                    <button id="reset_board">⭯</button>
+                    <button id="undo" disabled>&lt;</button>
+                    <button id="redo" disabled>&gt;</button>
+                    <button id="reset">⭯</button>
                 </div>
             </div>
         </div>
