improvements panel style

--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
     <body>
         <div class="chess">
             <div class="improvements">
-                <style>
-                    lar{font-size: 1.5rem;}
-                    lit{font-size: 1.1rem;}
-                </style>
-                
-                <lar><b>Work in progress: </b></lar><lit><i>Moves Panel</i></lit><p>
-                <lar><b>TODO: </b></lar><br/><br/>
-                <lit><i> 
-                    Bot <br/><br/>
-                    – Checks<br />
-                    – Pawn Promotion<br />
-                    – Game End</i
-                > <br /><br />
-                    <i>Arrows?</i><lit/> 
+                <h1>Work in progress:</h1>
+                <p>Moves Panel</p>
+
+                <h1>TODO:</h1>
+                <p>Bot</p>
+                <p>
+                    - Checks<br />
+                    - Pawn Promotion<br />
+                    - Game End
+                </p>
+                <p>Arrows?</p>
             </div>
 
             <div class="next_player">
@@ -38,7 +35,6 @@
                 </div>
             </div>
 
-
             <canvas id="board" class="board"> </canvas>
 
             <div class="panel">
@@ -51,5 +47,4 @@
             </div>
         </div>
     </body>
-    
 </html>
