--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <div class="chess">
             <div class="improvements">
                 <h1>Work in progress:</h1>
-                <p>Moves Panel</p>
+                <p>- Checks</p>
 
                 <h1>TODO:</h1>
                 <p>Bot</p>
                 <p>
-                    - Checks<br />
                     - Pawn Promotion<br />
                     - Game End
                 </p>
