--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="chess">
             <div class="improvements">
                 <h1>Work in progress:</h1>
-                <p>- Checks</p>
+                <p>Jest</p>
 
                 <h1>TODO:</h1>
                 <p>Bot</p>
