--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
         <div class="chess">
             <div class="improvements">
                 <h1>Work in progress:</h1>
-                <p>Jest</p>
+                <p>Game End: Checkmates</p>
 
                 <h1>TODO:</h1>
                 <p>Bot</p>
                 <p>
                     - Pawn Promotion<br />
-                    - Game End
+                    - Game End: Treefold Repetition<br />
+                    - Game End: 50 Moves Rule<br />
+                    - Game End: Stalemate<br />
+                    - Game End: Insufficient Material
                 </p>
                 <p>Arrows?</p>
             </div>
