Work panel update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <div class="chess">
             <div class="improvements">
                 <h1>Work in progress:</h1>
-                <p>Game End: Checkmates</p>
+                <p>
+                    - Game End: Checkmates <br />
+                    - Game End: Stalemate
+                </p>
 
                 <h1>TODO:</h1>
                 <p>Bot</p>
@@ -21,7 +24,6 @@
                     - Pawn Promotion<br />
                     - Game End: Treefold Repetition<br />
                     - Game End: 50 Moves Rule<br />
-                    - Game End: Stalemate<br />
                     - Game End: Insufficient Material
                 </p>
                 <p>Arrows?</p>
