Evaluation function intialized

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     Black to move
                 </div>
                 <div id="end_of_game" class="end_of_game" style="display: none"></div>
+                <div id="evaluation"></div>
             </div>
 
             <canvas id="board" class="board"> </canvas>
