--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
                 <p>Arrows?</p>
             </div>
 
-            <div id="next_player" class="next_player">
-                <div id="white_to_move" class="white_to_move">
-                    <div class="square"></div>
-                    White to move
+            <div class="header">
+                <div id="next_player" class="next_player">
+                    <div id="white_to_move" class="white_to_move">
+                        <div class="square"></div>
+                        White to move
+                    </div>
+                    <div id="black_to_move" class="black_to_move" style="display: none">
+                        <div class="square"></div>
+                        Black to move
+                    </div>
+                    <div id="end_of_game" class="end_of_game" style="display: none"></div>
                 </div>
-                <div id="black_to_move" class="black_to_move" style="display: none">
-                    <div class="square"></div>
-                    Black to move
-                </div>
-                <div id="end_of_game" class="end_of_game" style="display: none"></div>
                 <div id="evaluation"></div>
             </div>
 
