Code style + Evaluation style

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div id="end_of_game" class="end_of_game" style="display: none"></div>
                 </div>
-                <div id="evaluation"></div>
+                <div id="evaluation" class="evaluation"></div>
             </div>
 
             <canvas id="board" class="board"> </canvas>
