--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="chess">
             <div class="improvements">
                 <h1>Work in progress:</h1>
-                <p></p>
+                <p>Bug Fixing</p>
 
                 <h1>TODO:</h1>
                 <p>Bot</p>
                 <p>
-                    - Pawn Promotion<br />
+                    - Pawn Promotion: variants<br />
                     - Game End: Treefold Repetition<br />
                     - Game End: 50 Moves Rule<br />
                     - Game End: Insufficient Material
