Work panel update

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     - Game End: 50 Moves Rule<br />
                     - Game End: Insufficient Material
                 </p>
+                <p>Move Notation for Checks and Mates</p>
                 <p>Arrows?</p>
             </div>
 
