Update Work Panel

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="chess">
             <div class="improvements">
                 <h1>Work in progress:</h1>
-                <p>Bot</p>
+                <p>///</p>
 
                 <h1>TODO:</h1>
                 <p>
-                    - Pawn Promotion: variants<br />
+                    - Bug: Bot Doesn't Mate When Infinity Eval<br />
+                    - Pawn Promotion: Variants<br />
                     - Game End: Treefold Repetition<br />
                     - Game End: 50 Moves Rule<br />
-                    - Game End: Insufficient Material
+                    - Game End: Insufficient Material<br />
                 </p>
-                <p>Move Notation for Checks and Mates</p>
                 <p>Arrows?</p>
             </div>
 
