Remove Unnecessary br In index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     - Pawn Promotion: Variants<br />
                     - Game End: Treefold Repetition<br />
                     - Game End: 50 Moves Rule<br />
-                    - Game End: Insufficient Material<br />
+                    - Game End: Insufficient Material
                 </p>
                 <p>Arrows?</p>
             </div>
