--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             data-main="dist/main"
             src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
         ></script>
+        <link rel="stylesheet" href="src/css/reset.css" />
         <link rel="stylesheet" href="src/style.css" />
         <link rel="icon" href="images/favicon.png" />
     </head>
