made reset button icon compatible with all os

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="actions">
                     <button id="undo" disabled>&lt;</button>
                     <button id="redo" disabled>&gt;</button>
-                    <button id="reset">⭯</button>
+                    <button id="reset">&#x2B6F;</button>
                 </div>
             </div>
         </div>
