Fix not centered end_of_game text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="square"></div>
                         Black to move
                     </div>
-                    <div id="end_of_game" class="end_of_game" style="display: none"></div>
+                    <div id="end_of_game" style="display: none"></div>
                 </div>
                 <div id="evaluation" class="evaluation"></div>
             </div>
