Add play mode buttons to the UI

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <p>Arrows?</p>
             </div>
 
+            <div class="playmode">
+                <button id="player_vs_player">Player vs Player</button>
+                <button id="player_vs_bot">Player vs Bot</button>
+                <button id="bot_vs_bot">Bot vs Bot</button>
+            </div>
+
             <div class="header">
                 <div id="next_player" class="next_player">
                     <div id="white_to_move" class="white_to_move">
