Fix move panel max size

--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
     </head>
     <body>
         <div class="chess">
-            <div class="improvements">
-                <h1>Work in progress:</h1>
-                <p>UI</p>
+            <div class="left_panel">
+                <div class="improvements">
+                    <h1>Work in progress:</h1>
+                    <p>UI</p>
 
-                <h1>TODO:</h1>
-                <p>
-                    - Pawn Promotion: Variants<br />
-                    - Game End: Treefold Repetition<br />
-                    - Game End: 50 Moves Rule<br />
-                    - Game End: Insufficient Material
-                </p>
-                <p>Arrows?</p>
-            </div>
+                    <h1>TODO:</h1>
+                    <p>
+                        - Pawn Promotion: Variants<br />
+                        - Game End: Treefold Repetition<br />
+                        - Game End: 50 Moves Rule<br />
+                        - Game End: Insufficient Material
+                    </p>
+                    <p>Arrows?</p>
+                </div>
 
-            <div class="playmode">
-                <button id="player_vs_player">Player vs Player</button>
-                <button id="player_vs_bot">Player vs Bot</button>
-                <button id="bot_vs_bot">Bot vs Bot</button>
+                <div class="playmode">
+                    <button id="player_vs_player">Player vs Player</button>
+                    <button id="player_vs_bot">Player vs Bot</button>
+                    <button id="bot_vs_bot">Bot vs Bot</button>
+                </div>
             </div>
 
             <div class="header">
