Add border to active playMode button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="playmode">
-                    <button id="player_vs_player">Player vs Player</button>
+                    <button class="currentMode" id="player_vs_player">Player vs Player</button>
                     <button id="player_vs_bot">Player vs Bot</button>
                     <button id="bot_vs_bot">Bot vs Bot</button>
                 </div>
