Add arrow to active playmode + refactor code

--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@
                 </div>
 
                 <div class="playmode">
-                    <button class="currentMode" id="player_vs_player">Player vs Player</button>
-                    <button id="player_vs_bot">Player vs Bot</button>
-                    <button id="bot_vs_bot">Bot vs Bot</button>
+                    <button id="player_vs_player">
+                        <div class="playmode_arrow" id="player_vs_player_arrow"></div>
+                        <span>Player vs Player</span>
+                        <div class="playmode_arrow"></div>
+                    </button>
+                    <button id="player_vs_bot">
+                        <div class="playmode_arrow" id="player_vs_bot_arrow"></div>
+                        <span>Player vs Bot</span>
+                        <div class="playmode_arrow"></div>
+                    </button>
+                    <button id="bot_vs_bot">
+                        <div class="playmode_arrow" id="bot_vs_bot_arrow"></div>
+                        <span>Bot vs Bot</span>
+                        <div class="playmode_arrow"></div>
+                    </button>
                 </div>
             </div>
 
