Fix reset button character not supported by all os

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="actions">
                     <button id="undo" disabled>&lt;</button>
                     <button id="redo" disabled>&gt;</button>
-                    <button id="reset">&#x2B6F;</button>
+                    <button id="reset">↺</button>
                 </div>
             </div>
         </div>
