--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -12,6 +13,34 @@
     </head>
     <body>
         <div class="chess">
+            <div class="board_panel">
+                <div class="header">
+                    <div id="next_player" class="next_player">
+                        <div id="white_to_move" class="white_to_move">
+                            <div class="square"></div>
+                            White to move
+                        </div>
+                        <div id="black_to_move" class="black_to_move" style="display: none">
+                            <div class="square"></div>
+                            Black to move
+                        </div>
+                        <div id="end_of_game" style="display: none"></div>
+                    </div>
+                    <div id="evaluation" class="evaluation"></div>
+                </div>
+
+                <canvas id="board" class="board"></canvas>
+            </div>
+
+            <div class="moves_panel">
+                <div id="moves" class="moves"></div>
+                <div class="actions">
+                    <button id="undo" disabled>&lt;</button>
+                    <button id="redo" disabled>&gt;</button>
+                    <button id="reset">↺</button>
+                </div>
+            </div>
+
             <div class="control_panel">
                 <div class="improvements">
                     <h1>Work in progress:</h1>
@@ -43,36 +72,6 @@
                         <span>Bot vs Bot</span>
                         <div class="playmode_arrow"></div>
                     </button>
-                </div>
-            </div>
-
-            <div class="board_panel">
-                <div class="header">
-                    <div id="next_player" class="next_player">
-                        <div id="white_to_move" class="white_to_move">
-                            <div class="square"></div>
-                            White to move
-                        </div>
-                        <div id="black_to_move" class="black_to_move" style="display: none">
-                            <div class="square"></div>
-                            Black to move
-                        </div>
-                        <div id="end_of_game" style="display: none"></div>
-                    </div>
-                    <div id="evaluation" class="evaluation"></div>
-                </div>
-
-                <div class="board_container" id="board_container">
-                    <canvas id="board" class="board"></canvas>
-                </div>
-            </div>
-
-            <div class="moves_panel">
-                <div id="moves" class="moves"></div>
-                <div class="actions">
-                    <button id="undo" disabled>&lt;</button>
-                    <button id="redo" disabled>&gt;</button>
-                    <button id="reset">↺</button>
                 </div>
             </div>
         </div>
