--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <div class="chess">
+            <div id="temp_log_information"></div>
             <div class="board_panel">
                 <div class="header">
                     <div id="next_player" class="next_player">
