fix reset button arrow not centered in some os

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                             <div class="square"></div>
                             Black to move
                         </div>
-                        <div id="end_of_game" class="end_of_game" style="display: none;">
-                            <div class="square" style="width: 0;"></div>
+                        <div id="end_of_game" class="end_of_game" style="display: none">
+                            <div class="square" style="width: 0"></div>
                             <span id="end_of_game_text"></span>
                         </div>
                     </div>
@@ -39,9 +39,9 @@
             <div class="moves_panel">
                 <div id="moves" class="moves"></div>
                 <div class="actions">
-                    <button id="undo" disabled>&lt;</button>
-                    <button id="redo" disabled>&gt;</button>
-                    <button id="reset">↺</button>
+                    <button id="undo" disabled><span>&lt;</span></button>
+                    <button id="redo" disabled><span>&gt;</span></button>
+                    <button id="reset"><span>↺</span></button>
                 </div>
             </div>
 
