Refactor moves panel html & css + add padding to hide the text at very top or bottom

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             </div>
 
             <div class="moves_panel">
-                <div id="moves" class="moves"></div>
+                <div class="moves_container">
+                    <div id="moves" class="moves"></div>
+                </div>
                 <div class="actions">
                     <button id="undo" disabled><span>&lt;</span></button>
                     <button id="redo" disabled><span>&gt;</span></button>
