add a button to copy all moves

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
             <div class="moves_panel">
                 <div class="moves_container">
+                    <button id="copy_moves" class="copy_moves" title="Copy moves">
+                        <img class="copy_moves_image" src="images/copy-icon.svg" alt="copy moves" />
+                    </button>
                     <div id="moves" class="moves"></div>
                 </div>
                 <div class="actions">
