--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chess</title>
-        <script
-            data-main="dist/main"
-            src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
-        ></script>
         <link rel="stylesheet" href="src/css/reset.css" />
         <link rel="stylesheet" href="src/css/style.css" />
         <link rel="icon" href="images/favicon.png" />
@@ -85,5 +81,7 @@
                 </div>
             </div>
         </div>
+
+        <script src="dist/main.js"></script>
     </body>
 </html>
