--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </p>
                     <p>
                         - Pawn Promotion: Variants<br />
-                        - Game End: Treefold Repetition<br />
+                        - Game End: Threefold Repetition<br />
                         - Game End: 50 Moves Rule<br />
                         - Game End: Insufficient Material
                     </p>
