--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <img
                                     class="playing_color_selector_icon"
                                     id="player_vs_bot_white_arrow"
-                                    src="src/assets/cburnett/wN.svg"
+                                    src="src/assets/free-chess/white_knight.svg"
                                 />
                                 <span>White</span>
                             </button>
@@ -112,7 +112,7 @@
                                 <img
                                     class="playing_color_selector_icon"
                                     id="player_vs_bot_black_arrow"
-                                    src="src/assets/cburnett/bN.svg"
+                                    src="src/assets/free-chess/black_knight.svg"
                                 />
                                 <span>Black</span>
                             </button>
