Implement player color for player vs bot

--- a/index.html
+++ b/index.html
@@ -90,30 +90,12 @@
                             <span>Player vs Bot</span>
                         </button>
                         <div class="playmode_player_vs_bot_color">
-                            <button
-                                id="player_vs_bot_white"
-                                class="playing_color_selector"
-                                disabled
-                                title="Coming soon"
-                            >
-                                <img
-                                    class="playing_color_selector_icon"
-                                    id="player_vs_bot_white_arrow"
-                                    src="src/assets/free-chess/white_knight.svg"
-                                />
+                            <button id="player_vs_bot_white" class="playing_color_selector">
+                                <img class="playing_color_selector_icon" src="src/assets/free-chess/white_knight.svg" />
                                 <span>White</span>
                             </button>
-                            <button
-                                id="player_vs_bot_black"
-                                class="playing_color_selector"
-                                disabled
-                                title="Coming soon"
-                            >
-                                <img
-                                    class="playing_color_selector_icon"
-                                    id="player_vs_bot_black_arrow"
-                                    src="src/assets/free-chess/black_knight.svg"
-                                />
+                            <button id="player_vs_bot_black" class="playing_color_selector">
+                                <img class="playing_color_selector_icon" src="src/assets/free-chess/black_knight.svg" />
                                 <span>Black</span>
                             </button>
                         </div>
